--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "drd-plus/theurgist-codes",
+  "name": "drdplus/theurgist-codes",
   "license": "MIT",
   "type": "project",
   "description": "Codes with keywords for Drd+ theurgist",
@@ -11,7 +11,7 @@
   "require": {
     "php": ">=7.1",
     "granam/strict-object": "^3.0",
-    "drd-plus/codes": "^1.0"
+    "drdplus/codes": "^1.0"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
